welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: ')' expected but '=' found.
	if ((a+b) = (2 * a)) {
                  ^sumDouble:2: error: illegal start of simple expression
	if ((a+b) = (2 * a)) {
                           ^